--- a/app/client/index.html
+++ b/app/client/index.html
@@ -5,11 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content=" initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta content="telephone=no" name="format-detection" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <title>创投助手</title>
 </head>
 <body>
   <div id="root"></div>
+  <!--微信-->
+  <script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
   <!--linkedme--->
   <script src="https://lkme.cc/js/linkedme.min.js" ></script>
   <!--神策-->
